--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </ul>
             </section>
             <footer>
-                <p>Read More About A.P.J. Abdul Kalma on <a href="www.wikipedia.com">wikipedia</a></p>
+                <p>Read More About A.P.J. Abdul Kalma on <a href="www.wikipedia.org">wikipedia</a></p>
             </footer>
         </div>
     </div>
