--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="description">
             <section class="top-section">
                 <div class="image-container">
-                    <img src="images/apj.webp" alt="abdul kalam">
+                    <img src="apj.webp" alt="abdul kalam">
                 </div>
                 <div>
                     <h1>A.P.J. Abdul kalam</h1>
